<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView"
        android:layout_width="203dp"
        android:layout_height="34dp"
        android:fontFamily="serif"
        android:shadowColor="#4E0E0E"
        android:text="@string/textView"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="@string/textView2"
        android:textColor="#FFFDFD"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/Name"
        android:layout_width="333dp"
        android:layout_height="45dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.084" />

    <EditText
        android:id="@+id/Age"
        android:layout_width="333dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/Age"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <EditText
        android:id="@+id/Date"
        android:layout_width="333dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/Date"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Age" />

    <EditText
        android:id="@+id/UName"
        android:layout_width="333dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/UName"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Date" />

    <EditText
        android:id="@+id/Pwd"
        android:layout_width="333dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/Pwd"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UName" />

    <EditText
        android:id="@+id/Rpwd"
        android:layout_width="333dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/Rpwd"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Pwd" />

    <Button
        android:id="@+id/Rbtn"
        android:layout_width="218dp"
        android:layout_height="54dp"
        android:background="@android:color/holo_orange_dark"
        android:fontFamily="serif"
        android:text="@string/Rbtn"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Rpwd" />
</androidx.constraintlayout.widget.ConstraintLayout>