<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".Option">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="386dp"
        android:layout_height="45dp"
        android:background="@android:color/background_dark"
        android:text="@string/Meg9"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <Button
        android:id="@+id/button9"
        android:layout_width="365dp"
        android:layout_height="78dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_green_light"
        android:text="@string/Btn10"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="427dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="365dp"
        android:layout_height="78dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_red_dark"
        android:text="@string/Btn9"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="262dp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="365dp"
        android:layout_height="78dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/Btn8"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="99dp" />

</androidx.constraintlayout.widget.ConstraintLayout>