<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/first"
    tools:context=".MainActivity">

    <Button
        android:layout_width="365dp"
        android:layout_height="78dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="454dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/Btn1"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="93dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="243dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="267dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/Btn2"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="424dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="99dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/Btn3"
        android:textSize="24sp" />
</RelativeLayout>